--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,9 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/kebabbo_logo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.css' rel='stylesheet' /> 
+
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
